<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
<package>
  <name>udemy_unreal-engine-cpp</name>
  <version>0.1.0</version>
  <description>Software primarilly used for self-learning at MOOC courses about Unreal Engine.</description>
  <maintainer email="iisaac.saito@gmail.com">Isaac Saito</maintainer>
  <license>Apache</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
  <export />
</package>
